# datametl

./: .env.deploy.example  .env.example  .gitignore  CLAUDE.md  Makefile  README.md
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_comparison_schemas.py  0003_migration_runs.py  0004_verification_runs.py
backend/app/: config.py  crypto.py  db.py  main.py
backend/app/api/: activity.py  comparisons.py  connections.py  jobs.py  mappings.py  migrations.py  schemas_io.py  settings.py  snapshots.py  verifications.py
backend/app/comparison/: __init__.py  diff.py
backend/app/connectors/: __init__.py  base.py  postgres.py
backend/app/introspection/: normalized.py  postgres.py
backend/app/jobs/: queue.py  tasks.py  worker.py
backend/app/mapping/: __init__.py  registry.py  service.py
backend/app/migrations/: __init__.py  ddl.py  planner.py  pre_flight.py  runner.py
backend/app/models/: __init__.py  comparison.py  connection.py  mapping.py  migration_run.py  migration_run_table.py  schema_snapshot.py  verification_run.py  verification_run_table.py
backend/app/recipes/: __init__.py  supabase.py
backend/app/strategies/: __init__.py  base.py  logical_copy.py
backend/app/transforms/: __init__.py  column_plan.py
backend/app/verification/: __init__.py  base.py  hash_sample.py  row_count.py  (+2 more)
backend/tests/: _factories.py  conftest.py  test_column_plan.py  test_ddl.py  test_diff.py  test_introspection_normalize.py  test_mapping.py  test_supabase_recipe.py  test_verification_levels.py
(+56 files in other folders)
